<resources>
    <string name="app_name">KABC-II</string>
    <string name="login">Логин пользователя</string>
    <string name="log_in">Войти</string>
    <string name="log_out">Выйти</string>
    <string name="anon_log_in">Войти анонимно</string>
    <string name="incorrect_login">Неверный логин</string>
    <string name="loading_log_in">Загрузка…</string>
    <string name="user_info">Ваш логин: %s</string>
    <string name="conceptual_thinking">Исключение лишнего</string>
    <string name="pattern_reasoning">Паттерны</string>
    <string name="story_completion">Истории</string>
    <string name="story_completion_click">CLick</string>
    <string name="story_completion_drag">Drag</string>
    <string name="loading_image">Изображение не загрузилось</string>
    <string name="conceptual_thinking_task">Найдите лишнюю картинку</string>
    <string name="answer_a">A</string>
    <string name="answer_b">B</string>
    <string name="answer_c">C</string>
    <string name="answer_d">D</string>
    <string name="answer_e">E</string>
    <string name="answer_f">F</string>
    <string name="timer_end">00:00</string>
</resources>